# AimmyCPP

./: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  AimmyV2_CPP.sln  CMakeLists.txt  CMakeLists.txt.qtds  Makefile  README.md  ZERO_CHECK.vcxproj
configs/: AimLab-Harlan.cfg  Deadshot.cfg  Default.cfg  rust.cfg
include/: AIModel.h  Configs.h  Fonts.h  InputBindingManager.h  KeybindEventFilter.h  MainWindow.h  OverlayWindow.h  PredictAheadTarget.h  PredictionManager.h  PredictionMethod.h  RequirementsManager.h  SecondaryWindow.h  Settings.h  UserController.h  Visualization.h  sal2.h
predictions/: DistanceBasedSensitivity.cpp  LeadTargetPrediction.cpp  LeadTargetPrediction.h  VariableSpeedControl.cpp
src/: AIModel.cpp  Configs.cpp  Fonts.cpp  InputBindingManager.cpp  KeybindEventFilter.cpp  MainWindow.cpp  MainWindow.ui  OverlayWindow.cpp  OverlayWindow.ui  PredictAheadTarget.cpp  PredictionManager.cpp  RequirementsManager.cpp  SecondaryWindow.cpp  SecondaryWindow.ui  UserController.cpp  Visualization.cpp  main.cpp
